objects/tspa__SettingsBackup__c.object
<CustomObject>
    <fields>
        <fullName>tspa__Comment__c</fullName>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Configuration_Id__c</fullName>
        <label>Configuration Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__ImportSettingOrganizationID__c</fullName>
        <label>Import Setting Organization ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Last_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Last Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Package_Version__c</fullName>
        <label>Package Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Visual Remote Assistant-Setting Backup</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SB-{00000}</displayFormat>
        <label>Backup No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant-Settings Backup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>